Move Bumblebee Proxy Socket Location
Currently the bumblebee proxy socket is located directly under user
home. The commit moves it to a better location under $XDG_RUNTIME_DIR.

--- a/files/home/kmchan/.config/firejail/steam.profile.j2
+++ b/files/home/kmchan/.config/firejail/steam.profile.j2
@@ -5,6 +5,15 @@
 
 join-or-start kmchan-steam
 
+{% if service_bumblebee_enabled|default(false) %}
+#
+# Enable bumblebee support
+#
+
+env BUMBLEBEE_SOCKET={{ bumblebee_socket }}
+whitelist {{ bumblebee_socket }}
+
+{% endif -%}
 {% for section in account_steam_firejail_options|default([]) %}
 #
 # {{ section.name }}
