--- a/files/home/kmchan/.config/systemd/user/bumblebee-proxy.socket.j2
+++ b/files/home/kmchan/.config/systemd/user/bumblebee-proxy.socket.j2
@@ -1,6 +1,6 @@
 
 [Socket]
-ListenStream=/home/kmchan/.bumblebee.socket
+ListenStream={{ bumblebee_socket }}
 SocketUser=kmchan
 SocketGroup=kmchan
 SocketMode=0644
