Update Firejail Profile for Steam
The commit includes a few changes to firejail profile for Steam.

First of all, pulseaudio now puts the socket to /run/user/uid.
Therefore, we need to whitelist the file in the profile. We do so
by including the whitelist-runuser-common.inc.

Additionally, extra directories are whitelisted in the account
specific profile.

--- a/files/etc/firejail/steam.local.j2
+++ b/files/etc/firejail/steam.local.j2
@@ -1,5 +1,12 @@
 
 #
+# Whitelist common files under /run/user/<uid>, in particular, the
+# pulseaudio socket.
+#
+
+include whitelist-runuser-common.inc
+
+#
 # Allow games to make use of controllers by accessing devices under
 # /dev/input. However, it also allows games to access other device
 # nodes as well.
