--- a/files/etc/systemd/system/sddm.service.d/video.conf.j2
+++ b/files/etc/systemd/system/sddm.service.d/video.conf.j2
@@ -8,19 +8,31 @@
 [Service]
 Environment=__EGL_VENDOR_LIBRARY_FILENAMES={% for filename in hardware_video_output_egl_vendor_library_filenames -%}
 {%- if loop.first == false -%}:{%- endif -%}
-{%- if filename|first != "/" -%}
-/usr/share/glvnd/egl_vendor.d/{{ filename }}
-{%- else -%}
+{%- if filename|first == "/" -%}
 {{ filename }}
+{%- elif filename|ansible.builtin.regex_search('x86_64') == 'x86_64' -%}
+/usr/share/glvnd/egl_vendor.d/{{ filename }}:/usr/lib/x86_64-linux-gnu/GL/glvnd/egl_vendor.d/{{ filename }}
+{%- elif filename|ansible.builtin.regex_search('i386') == 'i386' -%}
+/usr/share/glvnd/egl_vendor.d/{{ filename }}:/usr/lib/i386-linux-gnu/GL/glvnd/egl_vendor.d/{{ filename }}
+{%- elif filename|ansible.builtin.regex_search('i686') == 'i686' -%}
+/usr/share/glvnd/egl_vendor.d/{{ filename }}:/usr/lib/i386-linux-gnu/GL/glvnd/egl_vendor.d/{{ filename }}
+{%- else -%}
+/usr/share/glvnd/egl_vendor.d/{{ filename }}:/usr/lib/x86_64-linux-gnu/GL/glvnd/egl_vendor.d/{{ filename }}:/usr/lib/i386-linux-gnu/GL/glvnd/egl_vendor.d/{{ filename }}
 {%- endif -%}
 {%- endfor %}
 
 Environment=VK_ICD_FILENAMES={% for filename in hardware_video_output_vk_icd_filenames -%}
 {%- if loop.first == false -%}:{%- endif -%}
-{%- if filename|first != "/" -%}
-/usr/share/vulkan/icd.d/{{ filename }}
-{%- else -%}
+{%- if filename|first == '/' -%}
 {{ filename }}
+{%- elif filename|ansible.builtin.regex_search('x86_64') == 'x86_64' -%}
+/usr/share/vulkan/icd.d/{{ filename }}:/usr/lib/x86_64-linux-gnu/GL/vulkan/icd.d/{{ filename }}
+{%- elif filename|ansible.builtin.regex_search('i386') == 'i386' -%}
+/usr/share/vulkan/icd.d/{{ filename }}:/usr/lib/i386-linux-gnu/GL/vulkan/icd.d/{{ filename }}
+{%- elif filename|ansible.builtin.regex_search('i686') == 'i686' -%}
+/usr/share/vulkan/icd.d/{{ filename }}:/usr/lib/i386-linux-gnu/GL/vulkan/icd.d/{{ filename }}
+{%- else -%}
+/usr/share/vulkan/icd.d/{{ filename }}:/usr/lib/x86_64-linux-gnu/GL/vulkan/icd.d/{{ filename }}:/usr/lib/i386-linux-gnu/GL/vulkan/icd.d/{{ filename }}
 {%- endif -%}
 {%- endfor %}
 {% endif %}
