Update DDClient Playbook for Fedora

--- a/files/etc/ddclient.conf.j2
+++ b/files/etc/ddclient.conf.j2
@@ -1,8 +1,6 @@
 
-
 {% for entry in service_ddclient_hosts -%}
-{% if entry.provider == 'namecheap' %}use=web, web=dynamicdns.park-your-domain.com/getip, protocol=namecheap, server=dynamicdns.park-your-domain.com, login={{ entry.domain }}, password={{ namecheap[entry.domain] }} {{ entry.host }}
+{% if entry.provider == 'namecheap' %}use=web, web=dynamicdns.park-your-domain.com/getip, protocol=namecheap, server=dynamicdns.park-your-domain.com, login={{ entry.domain }}, password={{ service_ddclient_namecheap_keys[entry.domain] }} {{ entry.host }}
 {% endif -%}
 {% endfor %}
-
 
