Reorganization of Hardware Related Playbooks
This commit moves sensor related tasks to a separate playbook.

--- a/files/desktop/etc/modules-load.d/sensor.conf.j2
+++ b/files/desktop/etc/modules-load.d/sensor.conf.j2
@@ -3,7 +3,7 @@
 # Sensor support
 #
 
-{% for module in hardware_sensor_modules|default([]) %}
+{% for module in system_sensor_modules|default([]) %}
 {{ module }}
 {% endfor %}
 
