Fix Networking for Home Assistant
Currently, the Home Assistant container is connected to the
home network via podman default bridge network. It means that
device scanning, mDNS resolution, etc does not work properly.
To fix the problem, the container can be modified to connect
to the home network directly via macvlan podman network.

Note that some sacrifices are made by moving to the macvlan
network. Port publishing function for podman no longer
works and the container is now only accessible via caddy.
Also, firewall cannot be used to protect the container.

--- a/files/common/etc/containers/systemd/home-assistant.container.j2
+++ b/files/common/etc/containers/systemd/home-assistant.container.j2
@@ -11,10 +11,9 @@ TimeoutStartSec=900
 [Container]
 Image=ghcr.io/home-assistant/home-assistant:stable
 Volume=/etc/home_assistant:/config:rw,nodev,noexec,nosuid,z
-Network=podman
+Network=home-assistant.network
 Network=caddy.network
 Network=mosquitto.network
-PublishPort=8123:8123
 Environment=TZ={{ service_home_assistant_timezone|default('UTC') }}
 Label="caddy={{ service_home_assistant_domain|mandatory }}"
 Label="caddy.reverse_proxy={{ '{{' }}upstreams 8123{{ '}}' }}"
